# testapp

./: .actrc  .dockerignore  .gitignore  .gitleaks.toml  .sops.yaml  ASSESSMENT.md  DOCKER_SECURITY.md  Dockerfile  Dockerfile.development  Makefile  README.md  SECURITY.md  SOPS_REVIEWER_INSTRUCTIONS.md  SOPS_WRAPPER_README.md  assessment-reviewer-private-key.asc  assessment-reviewer-public-key.asc  cdk.json  docker-compose.development.yml  docker-compose.yml  pyproject.toml
.act/: .vars
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: advanced-approval.yml  aws.yml  cache-optimization.yml  cd-controlled.yml  ci-development.yml  ci-feature.yml  ci-full.yml  ci-selective.yml  drift-detection.yml  incident-response.yml  infrastructure-destroy.yml  pr-environment.yml  quick-deploy.yml  security-compliance.yml  security-scan.yml
.zap/: rules.tsv
infrastructure/: .cdkrc.json  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MAKEFILE.md  Makefile  NETWORK_CONFIGURATION.md  README.md  cdk.json  jest.config.js  package-lock.json  package.json  validate.js  validate.ts
infrastructure/lib/: application-stack.d.ts  application-stack.js  application-stack.ts  ecs-platform-stack.d.ts  ecs-platform-stack.js  ecs-platform-stack.ts  monitoring-dashboard-stack.d.ts  monitoring-dashboard-stack.js  monitoring-dashboard-stack.ts  secrets-loader.d.ts  secrets-loader.js  secrets-loader.ts  security-policy-stack.d.ts  security-policy-stack.js  security-policy-stack.ts  testapp-infrastructure-stack.d.ts  testapp-infrastructure-stack.js  testapp-infrastructure-stack.ts  vpc-stack.d.ts  vpc-stack.js  vpc-stack.ts
infrastructure/lib/legacy/: README.md  testapp-infrastructure-stack.js  testapp-infrastructure-stack.ts
infrastructure/scripts/: deploy.sh  destroy.sh
infrastructure/test/: application-stack.test.js  application-stack.test.ts  ecs-platform-stack.test.js  ecs-platform-stack.test.ts  secrets-loader.test.js  secrets-loader.test.ts  setup.d.ts  setup.js  setup.ts  testapp-infrastructure.test.js  testapp-infrastructure.test.ts  vpc-stack.test.js  vpc-stack.test.ts
postman/: README.md  TestApp-API.postman_collection.json  TestApp-Docker.postman_environment.json  TestApp-Environments.postman_environment.json  TestApp-Production.postman_environment.json
scripts/python/sops/: setup_sops_wrapper.py  sops_wrapper.py  test_sops_wrapper.py
secrets/ci/: secrets.enc.yaml
secrets/dev/: secrets.enc.yaml
secrets/local/: secrets.enc.yaml
secrets/production/: secrets.enc.yaml
secrets/test/: secrets.enc.yaml
src/testapp/: middleware.py  settings.py  tests.py  urls.py  views.py
